Bug 1190646 - Make all largeops vertical for sizing calculations. r=fredw